code control-converters-AD

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(PICO_BOARD pico_w CACHE STRING "Board type")
 include(pico_sdk_import.cmake)
-project(Cap8_Ex4 C CXX ASM)
+project(control-converters-AD C CXX ASM)
 pico_sdk_init()
-add_executable(Cap8_Ex4 Cap8_Ex4.c)
-target_link_libraries(Cap8_Ex4 pico_stdlib hardware_adc hardware_pwm)
-pico_enable_stdio_usb(Cap8_Ex4 1)
-pico_enable_stdio_uart(Cap8_Ex4 1)
-pico_add_extra_outputs(Cap8_Ex4)
+add_executable(control-converters-AD control-converters-AD.c)
+target_link_libraries(control-converters-AD pico_stdlib hardware_adc hardware_pwm)
+pico_enable_stdio_usb(control-converters-AD 1)
+pico_enable_stdio_uart(control-converters-AD 1)
+pico_add_extra_outputs(control-converters-AD)
