--- a/wokwi.toml
+++ b/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/Cap8_Ex4.uf2'
-elf = 'build/Cap8_Ex4.elf'
+firmware = 'build/control-converters-AD.uf2'
+elf = 'build/control-converters-AD.elf'
